fixed some page layout issues

--- a/packages/queue/src/styles/_queue.scss
+++ b/packages/queue/src/styles/_queue.scss
@@ -1,4 +1,4 @@
 .queue {
-  height: 100%;
+  flex: 1;
   display: flex;
 }
